# pdf-rag-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_local_docker.sh  setup.py  test_local.py
backend/: .dockerignore  .env.example  Dockerfile  Makefile  check_documents.py  docker-compose.yml  main.py  requirements.txt  run_migration.py  setup.py
backend/app/: config.py  main.py
backend/app/core/: config.py  security.py  supabase.py
backend/app/models/: chat.py  document.py
backend/app/services/: __init__.py  chat.py  cloud_tasks.py  database.py  embedding.py  pdf_parser.py  processing.py  storage.py  supabase_client.py  tasks.py  vectorstore.py
backend/app/utils/: clients.py  cloud_tasks.py  file_utils.py  gemini_api.py  pdf_processing.py
backend/frontend_dist/: index.html
backend/migrations/: 20231013_add_metadata_to_documents.sql  20231014_add_chat_tables.sql  20231014_add_vector_extension_and_function.sql  20231014_add_vector_search_function.sql
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.jsx  App.tsx  index.css  utils.js
src/: rag_service.py  utils.py
terraform-gcp/: main.tf  terraform.tfvars  variables.tf
tests/: test_main.py  test_rag_service.py
tests/backend/: test_upload.py
tests/frontend/: test_placeholder.py
(+24 files in other folders)
