[project]
name = "pdf-rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.8.0",
    "celery==5.4.0",
    "fastapi==0.115.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "pdfplumber==0.11.4",
    "psycopg2-binary==2.9.9",
    "pypdf2==3.0.1",
    "redis==5.0.8",
    "sentence-transformers==3.2.0",
    "supabase==2.6.0",
    "torch==2.4.1",
    "transformers==4.44.2",
    "uvicorn[standard]==0.30.6",
]
